fix: fix word wrapping of comment

--- a/src/components/comment/comment.css
+++ b/src/components/comment/comment.css
@@ -7,6 +7,7 @@
 
 .comment__text {
     align-self: center;
+    overflow-wrap: anywhere;
 }
 
 .comment__user {
